2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypt-when-preview): New customizable
	variable.
	(mime-display-multipart/pgp-encrypted): New function.

	* semi-setup.el: Define autoload and mime-preview-codition's
	settings for mime-display-multipart/pgp-encrypted.

2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-encrypt-pgp-nonmime): New function.

2012-10-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Use mapc instead of mapcar for side effect.
	Assume emacs-major-version is greater than 18.

2012-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature)
	(mime-decrypt-application/pgp-encrypted): Use epa-display-info
	instead of epa-display-verify-result

	* mime-image.el (mime-image-normalize-xbm-buffer): Use
	string-to-number instead of string-to-int.

	* mime-shr.el: Load shr.el at compile time.

2012-10-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-epg.el: Renamed to mime-pgp.el.

	* mime-pgp.el: Renamed from mime-epg.el.

	* SEMI-ELS: Likewise.

	* semi-setup.el: Likewise.

2012-10-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-entity-score): New function.  The
	default score (-1) is hard-coded.
	(mime-display-multipart/alternative): Use it.
	(mime-view-multipart-entity-score): New function.
	(mime-view-type-subtype-score-alist): Add entry for multipart
	entity.

2012-09-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file)
	(mime-edit-insert-file-as-text): Minor refactoring.

2012-09-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-text-file)
	(mime-edit-insert-file-as-text): New functions.
	(mime-edit-mode-entity-map, mime-edit-menu-list, mime-edit-mode):
	Add entry for mime-edit-insert-file-as-text.

2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file-filename)
	(mime-edit-insert-file-charset)
	(mime-edit-insert-file-parameters): New functions.