@@ -1,3 +1,11 @@
+2012-12-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-view.el (mime-view-multipart-show-all-children): New
+	customizable variable.
+	(mime-display-multipart/related): Refer to it.
+
+	* mime-pgp.el (mime-display-multipart/pgp-encrypted): Likewise.
+
 2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-pgp.el (mime-pgp-decrypt-when-preview): New customizable
